# arqsoft-backend

./: README.md
fastapi_remedios/: pyproject.toml  remedios.db
fastapi_remedios/src/fastapi_remedios/: database.py  main.py  models.py  schemas.py
fastapi_remedios/src/fastapi_remedios/routes/: remedios.py
