[project]
name = "fastapi-remedios"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcos Queiroz",email = "marcosamfq123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)"
]

[tool.poetry]
packages = [{include = "fastapi_remedios", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
